# mlops

./: CMakeLists.txt  Dockerfile  Makefile  README.md  pyproject.toml
src/: main.cpp
src/hw1_mlops/: __init__.py
tests/: test_gray.py
